# Vic3Analyser

./: .gitignore  README.md  SCHEMA.md  config.toml  pyproject.toml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/vic3analyser/: __init__.py  config.py  pipeline.py
src/vic3analyser/analysis/: actions.py  build_what.py  build_where.py  capacity.py  construction.py  econ_model.py  fiscal.py  labour.py  market.py  optimize.py  pm_optimizer.py  pricing.py  private_construction.py  production.py  profitability.py  recommend.py  simulate.py  strategy.py  tech.py
src/vic3analyser/api/: server.py  watcher.py
src/vic3analyser/extract/: models.py  snapshot.py  visibility.py
src/vic3analyser/ingest/: defs.py  melt.py  parser.py
src/vic3analyser/store/: db.py
src/vic3analyser/web/: app.js  index.html  styles.css
tests/: test_analysis_core.py  test_analysis_extra.py  test_api.py  test_build_gating.py  test_build_order.py  test_defs.py  test_fiscal.py  test_labour.py  test_laws.py  test_melt.py  test_parser.py  test_production.py  test_recommend.py  test_snapshot.py  test_store.py  test_strategy.py
