[project]
name = "vic3analyser"
version = "0.1.0"
description = "Player-visible economic analysis dashboard for Victoria 3 saves"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "watchdog>=4.0",
    "pydantic>=2.6",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
vic3analyser = "vic3analyser.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vic3analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
